syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hops.tensorflow.clusterspecgen";
option java_outer_classname = "ClusterSpecGenProto";
option objc_class_prefix = "CSG";

package clusterspecgen;

service ClusterSpecGen {
    rpc RegisterContainer (RegisterContainerRequest) returns (RegisterContainerReply);
    rpc GetClusterSpec (GetClusterSpecRequest) returns (GetClusterSpecReply);
}

message Container {
    string applicationId = 1;
    string containerId = 2;
    string ip = 3;
    int32 port = 4;
    string jobName = 5;
    int32 taskIndex = 6;
}

message RegisterContainerRequest {
    Container container = 1;
}

message RegisterContainerReply {

}

message GetClusterSpecRequest {

}

message GetClusterSpecReply {
    repeated Container clusterSpec = 1;
}
